# ai-circo-kingmasonltd

./: .env.example  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  docker-compose.yml  docker-entrypoint.sh  pyproject.toml  pytest.ini  requirements-ci.txt  requirements.txt  setup.py
.circleci/: config.yml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: allowed-actions.yml  ci.yml  disable.yml  test.yml
config/: config.json  prometheus.yml  settings.yaml
docs/: api_reference.md  case_studies.md  theoretical_background.md
examples/: advanced_explainability_example.py  benchmarks.py  bias_detection_example.py  credit_scoring_fairness.py  differential_privacy_example.py  fairness_metrics_example.py  safety_monitoring_example.py  shap_explainer_example.py
src/: __init__.py  main.py
src/api/: router.py
src/bias_detection/: bias_detector.py
src/blockchain/: logger.py
src/dashboard/: app.py
src/energy/: optimizer.py
src/explainability/: lit_explainer.py  pair_visualizer.py  shap_explainer.py
src/fairness_metrics/: fairness_calculator.py
src/governance/: model_governance.py
src/maintenance/: predictor.py
src/monitoring/: metrics_tracker.py  system_monitor.py
src/orchestration/: config_manager.py  coordinator.py  responsible_ai_manager.py
src/privacy/: privacy_protector.py
src/robotics/: __init__.py  controller.py
src/safety_monitoring/: __init__.py  model_monitoring.py  safety_monitor.py  safety_system.py
src/security/: auth_manager.py
src/vision/: __init__.py  image_processor.py  model.py  plastic_detector.py
test/: tests_vision.py
tests/: __init__.py  conftest.py  test_basic.py  test_bias_detection.py  test_differential_privacy.py  test_explainability.py  test_fairness_metrics.py  test_safety_monitoring.py  test_shap_explainer.py  test_vision.py
