[tool.poetry]
name = "ai-circo-plastic-recycling"
version = "0.1.0"
description = "AI-Powered Plastic Recycling System"
authors = ["KingMason Ltd <support@kingmasonltd.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.21.0"
pandas = "^1.3.0"
opencv-python = "^4.5.0"
torch = "^1.9.0"
torchvision = "^0.10.0"
tensorflow = "^2.6.0"
scikit-learn = "^0.24.2"
ultralytics = "^8.0.0"
albumentations = "^1.0.0"
pyserial = "^3.5"
RPi.GPIO = "^0.7.0"
gpiozero = "^1.6.2"
streamlit = "^1.0.0"
plotly = "^5.3.0"
dash = "^2.0.0"
fastapi = "^0.68.0"
uvicorn = "^0.15.0"
python-multipart = "^0.0.5"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
sqlalchemy = "^1.4.0"
psycopg2-binary = "^2.9.0"
alembic = "^1.7.0"
web3 = "^5.24.0"
eth-account = "^0.5.6"
prometheus-client = "^0.11.0"
python-dotenv = "^0.19.0"
loguru = "^0.5.3"
pyyaml = "^6.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^6.2.5"
pytest-cov = "^2.12.0"
pytest-asyncio = "^0.15.0"
black = "^21.7b0"
flake8 = "^3.9.0"
mypy = "^0.910"
isort = "^5.9.0"
sphinx = "^4.1.0"
sphinx-rtd-theme = "^0.5.2"
nbsphinx = "^0.8.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py38']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 100

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true 